oauth2-proxy/overlays/jaeger/deployment-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
spec:
  selector:
    matchLabels:
      app: oauth2-proxy-jaeger
  template:
    metadata:
      labels:
        app: oauth2-proxy-jaeger
    spec:
      containers:
        - name: oauth2-proxy
          args:
            - --provider=oidc
            - --oidc-issuer-url=https://auth.outi.ir
            - --redirect-url=https://jaeger.login.outi.ir/oauth2/jaeger/callback
            - --proxy-prefix=/oauth2/jaeger
            - --email-domain=*
            - --http-address=0.0.0.0:4180
            - --upstream=static://200
            - --cookie-secure=true
            - --cookie-samesite=lax
            - --cookie-name=_oauth2_proxy_jaeger
            - --set-xauthrequest=true
            - --pass-authorization-header=true
            - --pass-access-token=true
            - --skip-provider-button=true
