oauth2-proxy/overlays/jaeger/service-patch.yml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  labels:
    app: oauth2-proxy-jaeger
spec:
  selector:
    app: oauth2-proxy-jaeger
