oauth2-proxy/overlays/jaeger/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jaeger.login.outi.ir
      secretName: jaeger-tls
  rules:
    - host: jaeger.login.outi.ir
      http:
        paths:
          - path: /oauth2/jaeger
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  name: http
